data/derived/fa15/progs/unify/prog4056.ml.out
Characters 163-178:
  |Average (e1, e2) -> (exprToString e1 +. exprToString e2)/2
                        ^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
